# isaac-sim-event-camera-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
dvs_gen/: __init__.py
dvs_gen/assets/: __init__.py  camera.py  objects.py
dvs_gen/data/: __init__.py  stereo.yaml
dvs_gen/data/ycb_objects/: banana.usd  bleach_cleanser.usd  bowl.usd  cracker_box.usd  extra_large_clamp.usd  foam_brick.usd  gelatin_box.usd  large_clamp.usd  large_marker.usd  master_chef_can.usd  mug.usd  mustard_bottle.usd  pitcher_base.usd  potted_meat_can.usd  power_drill.usd  pudding_box.usd  scissors.usd  sugar_box.usd  tomato_soup_can.usd  tuna_fish_can.usd  wood_block.usd
dvs_gen/dvs/: __init__.py  noise.py  processor.py  recorder.py
dvs_gen/env/: __init__.py  default_cfg.py  env_cfg.py  events.py  observation.py  scene.py  terminations.py
dvs_gen/io/: __init__.py  blur.py  video.py
dvs_gen/representations/: __init__.py  adaptive_interval.py  config.py  core.py  dataset.py  event_frames.py  mcts.py  slicing.py  transforms.py  visualize_bluewhite.py  visualize_representation.py
dvs_gen/sensors/: __init__.py  dvs_camera.py
dvs_gen/sim_utils/: __init__.py  background_randomizer.py  camera_usd.py
dvs_gen/warp/: __init__.py  interpolation.py
examples/: quickstart.py
extension/dvs_preview/config/: extension.toml
extension/dvs_preview/dvs_preview/: __init__.py  extension.py
scripts/: process_ycb.py  simulate_warp.py  visualize_event.py  visualize_rgb.py
